# Copyright 2020 Walmart Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sawtooth-toolkit"
version = "0.1.0"
authors = ["S m, Aruna <aruna.mohan@walmartlabs.com>"]
edition = "2018"

[dependencies]
sawtooth-sdk = { git="https://github.com/hyperledger/sawtooth-sdk-rust", features = ["pem"] }
clap = "2.33.3"
log = "0.3"
flexi_logger = "0.14"
